--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^2.16.0
+  firebase_database: ^10.2.7
+  firebase_auth: ^4.10.1
 
 dev_dependencies:
   flutter_test:
