--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
     sdk: flutter
   intl: any
   provider: ^6.0.5
+  spotify_sdk:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -41,6 +42,8 @@ dependencies:
   firebase_core: ^2.16.0
   firebase_database: ^10.2.7
   firebase_auth: ^4.10.1
+  google_maps_flutter: ^2.5.0
+  google_maps_flutter_web: ^0.5.4+2
 
 dev_dependencies:
   flutter_test:
