--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -15,6 +15,8 @@ pluginManagement {
     }
 }
 
+include ':spotify-app-remote'
+
 include ":app"
 
 apply from: "${settings.ext.flutterSdkPath}/packages/flutter_tools/gradle/app_plugin_loader.gradle"
