--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   intl: any
   provider: ^6.0.5
   spotify_sdk:
+  # flutter_web_auth_2: ^3.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,6 +45,10 @@ dependencies:
   firebase_auth: ^4.10.1
   google_maps_flutter: ^2.5.0
   google_maps_flutter_web: ^0.5.4+2
+  flutter_map: ^5.0.0
+  latlong2: ^0.9.0
+  logger:
+  flutter_dotenv:
 
 dev_dependencies:
   flutter_test:
