Spotify connection success plus login started

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,7 +24,7 @@ if (flutterVersionName == null) {
 
 android {
     namespace "com.example.moyo"
-    compileSdkVersion flutter.compileSdkVersion
+    compileSdkVersion 34//flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -49,6 +49,7 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        manifestPlaceholders = [redirectSchemeName: "spotify-sdk", redirectHostName: "auth"]
     }
 
     buildTypes {
@@ -70,10 +71,11 @@ repositories {
 
 dependencies {
     implementation project(':spotify-app-remote')
-    implementation "com.google.code.gson:gson:2.8.9"
-    implementation 'com.spotify.android:auth:1.2.6' // Maven dependency
+    implementation "com.google.code.gson:gson:2.10"
+    implementation 'com.spotify.android:auth:2.1.0' // Maven dependency
+    implementation 'com.google.firebase:firebase-messaging:21.0.1'
 
     // All other dependencies for your app should also be here:
     //implementation 'androidx.browser:browser:1.5.0'
-   // implementation "androidx.appcompat:appcompat:$appCompatVersion"
+    //implementation "androidx.appcompat:appcompat:$appCompatVersion"
 }
