--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,14 +35,16 @@ dependencies:
   intl: any
   provider: ^6.0.5
   spotify_sdk:
-  # flutter_web_auth_2: ^3.0.0
+  # oauth2_client: ^2.4.2
+  flutter_web_auth_2: ^3.0.0
+  firebase_messaging: ^14.7.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^2.16.0
   firebase_database: ^10.2.7
-  firebase_auth: ^4.10.1
+  firebase_auth: ^4.11.1
   google_maps_flutter: ^2.5.0
   google_maps_flutter_web: ^0.5.4+2
   flutter_map: ^5.0.0
