--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   # oauth2_client: ^2.4.2
   flutter_web_auth_2: ^3.0.0
   firebase_messaging: ^14.7.1
+  url_launcher:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
