--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,10 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.0'
+        classpath 'com.android.tools.build:gradle:7.3.1'
+        // START: Flutterfire configuration
+        classpath 'com.google.gms:google-services:4.4.0'
+        // END: Flutterfire configuration
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
