--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   flutter_local_notifications: ^16.1.0
   http:
   google_nav_bar:
+  firebase_storage:
+  persistent_bottom_nav_bar: any
 
 dev_dependencies:
   flutter_test:
