--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -117,6 +117,10 @@ flutter:
         - asset: fonts/ClashGrotesk-Medium.ttf
         - asset: fonts/ClashGrotesk-Regular.ttf
         - asset: fonts/ClashGrotesk-Semibold.ttf
+    - family: Nexa
+      fonts:
+        - asset: fonts/nexa-bold.otf
+        - asset: fonts/nexa-light.otf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
